# chiralfinder

./: README.md  pyproject.toml  test.py
.github/workflows/: python-package.yml
chiralfinder/: __init__.py
chiralfinder/_quadrupole/: __init__.py  quadrupole_center.py  quadrupole_utils.py  quadrupole_v1.py  quadrupole_v2.py  quadrupole_v3.py  quadrupole_v4.py  quadrupole_v5.py  quadrupole_v6.py  run.py
data/: RotA.pkl  chiral_for_no_pubchem_scaffold.pkl
